# elasticsearch-dbapi

./: .env  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  RELEASING.md  URLLIB3-FIX.plan  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: ci.yml
es/: __init__.py  api.py  baseapi.py  basesqlalchemy.py  const.py  db.py  exceptions.py  sqlalchemy.py
es/aws/: __init__.py  api.py  sqlalchemy.py
es/elastic/: __init__.py  api.py  sqlalchemy.py
es/opendistro/: __init__.py  api.py  sqlalchemy.py
es/tests/: test_0_fixtures.py  test_dbapi.py  test_sqlalchemy.py
es/tests/fixtures/: data1.json  data1_mappings.json  fixtures.py  flights.json  logs.json
utils/: 1.py  export.py  t_aws.py  t_es.py
