[metadata]
name = elasticsearch-dbapi
summary = A DBAPI and SQLAlchemy dialect for Elasticsearch
description-file = README.md
author = Preset Inc.
author-email = daniel@preset.io
license = Apache License, Version 2.0

[mypy]
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
